# quickstart-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  test.py  test_main.py
data/: decks.json  sample-deck.json
dbschema/: default.esdl
dbschema/migrations/: 00001-m1fdtca.edgeql
