[project]
name = "quickstart-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gel",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.uv.sources]
gel = { git = "https://github.com/geldata/gel-python", branch = "master" }
